test/corpus/import.txt
================================================================================
import declaration
================================================================================
import(
  "moonbitlang/core/test"
)
--------------------------------------------------------------------------------

(signature
  (signature_item
    (import_declaration
      (string_literal)
      (semicolon))))
