test/corpus/package.txt
================================================================================
package declaration
================================================================================
package "moonbitlang/core/test"
--------------------------------------------------------------------------------

(signature
  (signature_item
    (package_declaration
      (string_literal
        (string_fragment
          (unescaped_string_fragment))))))
